add load dump client